added interactive calendar with api integration for future launches

--- a/launches.htm
+++ b/launches.htm
@@ -23,15 +23,18 @@
             </ul>
         </header>
         <main id="viewHeight" class="scrollBox flexContainer">
-            <div>
-                <h2>Future launches</h2>
+            <div class="flexElement">
+                <h2 class="centerHeader">Future launches</h2>
                 <div id="calendar">
                 </div>
+                <div id="event" class="closed">
+                </div>
             </div>
-            <div>
-                <h2>Past launches</h2>
+            <div class="flexElement">
+                <h2 class="centerHeader">Past launches</h2>
             </div>
         </main>
         <script src="js/launches.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
     </body>
 </html>
