naming changes, moved function init, capsules api-call to rockets.htm

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="indexBackground">
+        <div id="pageBackground">
             <img src="img/2016_-_01-26751237322_ceb6d56235_o_1.jpg" draggable="false">
         </div>
         <header>
