--- a/launches.htm
+++ b/launches.htm
@@ -10,7 +10,7 @@
         <script src="https://unpkg.com/@fullcalendar/daygrid/main.min.js"></script>
     </head>
     <body>
-        <div id="indexBackground">
+        <div id="pageBackground">
             <img src="img/2012_-_9_crs1_launch.jpg" draggable="false">
         </div>
         <header>
@@ -43,5 +43,10 @@
         <script src="js/launches.js"></script>
         <script src="js/scrollDetection.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
+        <script>
+            calendarInit();
+
+            pastLaunchPopulate();
+        </script>
     </body>
 </html>
