--- a/launches.htm
+++ b/launches.htm
@@ -29,6 +29,8 @@
                 </div>
                 <div id="event" class="closed">
                 </div>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2016_-_07_rics_jcsat-img_0678.jpg?itok=wG7yy6NT" alt="Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;" class="spaceXImg noGridImg">
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/geometry_08_poidx-062816-06_-_resize.jpg?itok=iR7hewRk" alt="Inspecting a Falcon 9 interstage" class="spaceXImg noGridImg">
             </div>
             <div class="flexElement">
                 <h2 class="centerHeader">Past launches</h2>
