api-call for historical events, added images, fixes

--- a/iss.htm
+++ b/iss.htm
@@ -28,7 +28,7 @@
             <h1 class="centerHeader">The Internation Space Station</h1>
             <div class="singleContainer">
                 <p>ISS is a space station in low Earth orbit, and is a joint program between NASA, Roscosmos, JAXA, ESA and CSA.</p>
-                <blockquote>Source and more information: <a href="https://en.wikipedia.org/wiki/International_Space_Station">Wikipedia</a></blockquote>
+                <blockquote>Source and more information: <a href="https://en.wikipedia.org/wiki/International_Space_Station" target="_blank">Wikipedia</a></blockquote>
                 <h3>Current location of the International Space Station</h3>
                 <div id="map">
                 </div>
