--- a/rockets.htm
+++ b/rockets.htm
@@ -25,6 +25,14 @@
                 </div>
                 <div id="eventLeft" class="closed">
                 </div>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/geometry_08_poidx-062816-06_-_resize.jpg?itok=iR7hewRk" alt="Inspecting a Falcon 9 interstage" class="spaceXImg noGridImg">
+                <p class="imgText">Inspecting a Falcon 9 interstage</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/geometry_01_poidx-042516-09_-_resize.jpg?itok=AAHwXDor" alt="Examining a Dragon 2 weldment unit grid pattern" class="spaceXImg noGridImg">
+                <p class="imgText">Examining a Dragon 2 weldment unit grid pattern</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/geometry_09_mvac_shipping-129a9726_-_resize.jpg?itok=bSMO533e" alt="A Merlin vacuum engine prepares to be shipped for testing" class="spaceXImg noGridImg">
+                <p class="imgText">A Merlin vacuum engine prepares to be shipped for testing</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2009_-_03_nine_merlins_low_center_img_3220.jpg?itok=_pUwQtqi" alt="Nine Merlin engines in SpaceX headquarters" class="spaceXImg noGridImg">
+                <p class="imgText">Nine Merlin engines in SpaceX headquarters</p>
             </div>
             <div class="flexElement">
                 <h2 class="centerHeader">Rocket Cores</h2>
