--- a/launches.htm
+++ b/launches.htm
@@ -30,7 +30,17 @@
                 <div id="event" class="closed">
                 </div>
                 <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2016_-_07_rics_jcsat-img_0678.jpg?itok=wG7yy6NT" alt="Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;" class="spaceXImg noGridImg">
-                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/geometry_08_poidx-062816-06_-_resize.jpg?itok=iR7hewRk" alt="Inspecting a Falcon 9 interstage" class="spaceXImg noGridImg">
+                <p class="imgText">Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/first_reflight_-_08_ses-10_drone_l-0_-_033117_-_bi0i2389.jpg?itok=kzJ8ZGdq" alt="Rocket at sunrise, ahead of its second launch" class="spaceXImg noGridImg">
+                <p class="imgText">Rocket at sunrise, ahead of its second launch</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/39a_12_crs-10_nwramp.jpg?itok=Egin-zoD" alt="Falcon 9 and Dragon launch from Launch Complex 39A" class="spaceXImg noGridImg">
+                <p class="imgText">Falcon 9 and Dragon launch from Launch Complex 39A</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2015_-_05_crs6_dragon_under_chutes2.jpg?itok=WqL1qxNc" alt="Dragon spacecraft returning to earth from The International Space Station" class="spaceXImg noGridImg">
+                <p class="imgText">Dragon spacecraft returning to earth from The International Space Station</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2013_-_5_731710main_iss034e060657_full.jpg?itok=UeuGyI9A" alt="Dragon attached to The International Space Station" class="spaceXImg noGridImg">
+                <p class="imgText">Dragon attached to The International Space Station</p>
+                <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2009_-_02_default_liftoff_west_full_wide_nn6p2062_xl.jpg?itok=Ee-f08zD" alt="Falcon 1 launches from Omelek Island in The Kwajalein Atoll" class="spaceXImg noGridImg">
+                <p class="imgText">Falcon 1 launches from Omelek Island in The Kwajalein Atoll</p>
             </div>
             <div class="flexElement">
                 <h2 class="centerHeader">Past launches</h2>
