--- a/spacex.htm
+++ b/spacex.htm
@@ -23,13 +23,17 @@
                 <h2 class="centerHeader">SpaceX</h2>
                 <div id="summary" class="detailContainer">
                 </div>
+                <div id="roles" class="detailContainer">
+                </div>
                 <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2016_-_12_mars_city_one_utopia-final-smf.jpg?itok=Lh9wNJ1w" alt="Artist's redering of the approach to Mars" class="spaceXImg noGridImg">
-                <p class="imgText">Artist's redering of the approach to Mars</p>
-                <div id="something" class="detailContainer">
+                <p class="imgText aboutImgText">Artist's redering of the approach to Mars</p>
+                <div id="figures" class="detailContainer">
+                </div>
+                <div id="links" class="detailContainer">
                 </div>
                 <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2011_-_04_p09_hdr2_flag_resize.jpg?itok=ZsqevpaX" alt="SpaceX headquarters" class="spaceXImg noGridImg">
-                <p class="imgText">SpaceX headquarters</p>
-                <div id="links" class="detailContainer">
+                <p class="imgText aboutImgText">SpaceX headquarters</p>
+                <div id="location" class="detailContainer">
                 </div>
             </div>
             <div class="flexElement">
