--- a/iss.htm
+++ b/iss.htm
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content="Current location, next passing at your location and current crew of ISS">
+        <meta name="keywords" content="Space travel, Mars, ISS, SpaceX, space, rockets, capsules, cores">
         <meta name="author" content="Frank Waldal">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A Mars Adventure - ISS</title>
         <link rel="stylesheet" href="css/commonStyles.css">
         <link href="css/mobileStyles.css" media="screen and (max-width: 699px)" rel="stylesheet">
-        <link href="css/tabletStyles.css" media="screen and (min-width: 700px) and (max-width: 1199px)" rel="stylesheet">
-        <link href="css/lowResStyles.css" media="screen and (min-width: 1200px) and (max-width: 1799px)" rel="stylesheet">
+        <link href="css/tabletStyles.css" media="screen and (min-width: 700px) and (max-width: 1299px)" rel="stylesheet">
+        <link href="css/lowResStyles.css" media="screen and (min-width: 1300px) and (max-width: 1799px)" rel="stylesheet">
         <link rel='stylesheet' media='screen and (min-width: 1800px)' href='css/highResStyles.css'>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
             integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -56,7 +56,7 @@
                 </ul>
             </div>
         </main>
-        <button id="up">&#x2B06;</button>
+        <img src="img/upArrow.svg" id="up">
         <script src="js/scrollMobileMenu.js"></script>
         <script src="js/iss.js"></script>
     </body>
