--- a/rockets.htm
+++ b/rockets.htm
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content="An overview over different capsules and cores used by SpaceX">
+        <meta name="keywords" content="Space travel, Mars, ISS, SpaceX, space, rockets, capsules, cores">
         <meta name="author" content="Frank Waldal">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A Mars Adventure - SpaceX Rockets</title>
         <link rel="stylesheet" href="css/commonStyles.css">
         <link href="css/mobileStyles.css" media="screen and (max-width: 699px)" rel="stylesheet">
-        <link href="css/tabletStyles.css" media="screen and (min-width: 700px) and (max-width: 1199px)" rel="stylesheet">
-        <link href="css/lowResStyles.css" media="screen and (min-width: 1200px) and (max-width: 1799px)" rel="stylesheet">
+        <link href="css/tabletStyles.css" media="screen and (min-width: 700px) and (max-width: 1299px)" rel="stylesheet">
+        <link href="css/lowResStyles.css" media="screen and (min-width: 1300px) and (max-width: 1799px)" rel="stylesheet">
         <link rel='stylesheet' media='screen and (min-width: 1800px)' href='css/highResStyles.css'>
     </head>
     <body>
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </main>
-        <button id="up">&#x2B06;</button>
+        <img src="img/upArrow.svg" id="up">
         <script src="js/rockets.js"></script>
         <script src="js/launches.js"></script>
         <script src="js/scrollMobileMenu.js"></script>
