--- a/iss.htm
+++ b/iss.htm
@@ -45,13 +45,14 @@
                 <h3>Current location of the International Space Station</h3>
                 <div id="map">
                 </div>
+                <p id="mapError"></p>
                 <div class="buttonContainer">
                     <button id="refresh">Refresh position</button>
                 </div>
                 <h3 id="passingHeading">Next passings at your location</h3>
                 <ul id="passing">
                 </ul>
-                <h3>Current crew</h3>
+                <h3 id="crewHeading">Current crew</h3>
                 <ul id="crew">
                 </ul>
             </div>
