changes to mobile menu, prevent edge-case bug when change to resolution

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
         </div>
         <header id="indexHeader">
             <h1>A Mars Adventure</h1>
-            <ul>
+            <ul id="mobileClosed">
                 <li class="current">Home</li>
                 <li><a href="spacex.htm">About SpaceX</a></li>
                 <li><a href="launches.htm">Launches</a></li>
