--- a/spacex.htm
+++ b/spacex.htm
@@ -19,7 +19,7 @@
         </div>
         <header>
             <h1><a href="index.htm">A Mars Adventure</a></h1>
-            <ul>
+            <ul id="mobileClosed">
                 <li><a href="index.htm">Home</a></li>
                 <li class="current">About SpaceX</li>
                 <li><a href="launches.htm">Launches</a></li>
