--- a/rockets.htm
+++ b/rockets.htm
@@ -19,7 +19,7 @@
         </div>
         <header>
             <h1><a href="index.htm">A Mars Adventure</a></h1>
-            <ul>
+            <ul id="mobileClosed">
                 <li><a href="index.htm">Home</a></li>
                 <li><a href="spacex.htm">About SpaceX</a></li>
                 <li><a href="launches.htm">Launches</a></li>
